--- a/app/views/templates/repo.haml
+++ b/app/views/templates/repo.haml
@@ -1,5 +1,7 @@
 .repo-name
-  {{ repo.full_github_name }}
+  %span {{ repo.full_github_name }}
+.settings
+  %a{ "ng-href": "/owners/{{ repo.owner_name }}" } Edit
 .repo-activation-toggle{ "ng-class": "{ 'repo-activation-toggle--private': repo.private }" }
   %span.repo-private-label Private - $12
   %button.repo-toggle{ "ng-click": "toggle()",
