--- a/app/views/templates/repo.haml
+++ b/app/views/templates/repo.haml
@@ -1,7 +1,7 @@
 .repo-name
   {{ repo.full_github_name }}
 .repo-activation-toggle{ "ng-class": "{ 'repo-activation-toggle--private': repo.private }" }
-  %span.repo-private-label Private - $12
+  %span.repo-private-label Private (requires subscription)
   %button.repo-toggle{ "ng-click": "toggle()",
     "ng-disabled": "processing",
     "ng-if": "repo.admin" }
