--- a/app/views/templates/organization.haml
+++ b/app/views/templates/organization.haml
@@ -1,16 +1,18 @@
 %header.organization-header
   %h2.organization-header-title
     {{ organization.name }}
-  -# .organization-header-toggle
-  -#   %p.organization-header-label
-  -#     Use organization-wide config
-  -#   %input#toggle{ 'class' => 'organization-header-toggle-input',
-  -#     'type' => 'checkbox', 'name' => 'toggle' }
-  -#   %label.organization-header-toggle-switch{ 'for' => 'toggle' }
-  -# .organization-header-config
-  -#   %p.organization-header-label
-  -#     Use hound.yml from
-  -#   %select.organization-header-select
-  -#     %option thoughtbot/hound
+  .organization-header-toggle
+    %span.organization-header-label
+      Use Hound defaults
+    %input{ 'class' => 'organization-header-toggle-input',
+      'type' => 'checkbox', 'name' => 'organization-level-config',
+      'id' => '{{ organization.name }}',
+      'checked' => '{{ organization.config_enabled }}'}
+      %label.toggle-switch{ 'for' => '{{ organization.name }}' }
+        .organization-header-config
+          %span.organization-header-label
+            Use hound.yml from
+    -# %select.organization-header-select
+    -#   %option thoughtbot/hound
 %section.repo_listing{ 'repo-list' => '' }
 = render 'preload_template', template: 'repo_list'
