--- a/app/views/errors/500.haml
+++ b/app/views/errors/500.haml
@@ -1,17 +1,15 @@
-<h1>
+%h1
   Something went wrong!
-</h1>
-<h2>
+
+%h2
   We've been notified of this problem.
-</h2>
-<p>
+
+%p
   Feel free to
-  <a href="https://github.com/houndci/hound/issues">
+  %a{ href: "https://github.com/houndci/hound/issues" }
     open an issue on GitHub
-  </a>
   to help us track down the error.
-</p>
-<p>
+
+%p
   You can also reach out to us
-  <a href="https://twitter.com/houndci/">on twitter.</a>
-</p>
+  %a{ href: "https://twitter.com/houndci/" } on twitter.
